--- a/src/svnpoller/svnpoller.ini
+++ b/src/svnpoller/svnpoller.ini
@@ -1,12 +1,8 @@
-[DEFAULT]
-url = None
-newest_rev = None
-address = None
+[mail]
+smtpserver = localhost
+fromaddr = admin@example.com
 
-[smtpserver]
-smtp = localhost
-
-[default-section]
-url = <subversion repository url>
-address = <email address (comma separated)>
+[sample-section]
+url = http://svn.example.org/repos
+address = test1@example.com, test2@example.com
 
