add tests and code re-structuring.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,13 +1,20 @@
 [buildout]
-parts = svnpoller
+parts = svnpoller test
 
 eggs =
 	svnpoller
 
-#develop = .
+develop = .
 
 
 [svnpoller]
 recipe = zc.recipe.egg
 eggs = ${buildout:eggs}
+interpreter = py
+
+[test]
+recipe = zc.recipe.egg
+eggs =
+	${buildout:eggs}
+	nose
 
