* update: use minimock for unittest.  * update: buildout.cfg for nosetest  * change: bin/nosetest replaced with bin/test

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,20 +1,16 @@
 [buildout]
 parts = svnpoller test
 
-eggs =
-	svnpoller
 
 develop = .
 
 
 [svnpoller]
 recipe = zc.recipe.egg
-eggs = ${buildout:eggs}
+eggs = svnpoller
 interpreter = py
 
 [test]
-recipe = zc.recipe.egg
-eggs =
-	${buildout:eggs}
-	nose
+recipe = pbp.recipe.noserunner
+eggs = svnpoller[test]
 
