* add xml files for test fixture.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,4 @@ include bootstrap.py
 include buildout.cfg
 include TODO.txt
 include MANIFEST.in
-recursive-include src/svnpoller *.py *.txt *.ini
+recursive-include src/svnpoller *.py *.txt *.ini *.xml
